# llm_training

./: .gitignore  pyproject.toml
llm_training/: generate.py  tokenizers.py
llm_training/configs/: default_config.yaml  default_config_vit.yaml
llm_training/data/: datacollator.py  datasets.py  loaders.py  transforms.py
llm_training/distributed/: __init__.py
llm_training/layers/: attention.py  embeddings.py  transformer_layer.py
llm_training/models/: llm.py  vit.py
llm_training/train/: train.py  train_llm.py  train_vit.py  utils.py
tests/data/: test_datacollator.py  test_datasets.py
tests/layers/: test_embeddings.py  test_transformer_layer.py
tests/models/: test_llm.py  test_vit.py
