[project]
name = "llm-training"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "omegaconf>=2.3.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]


[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["."]
include = ["annotix_ml"]
exclude = []
namespaces = false
